--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Harrison Zhao"
-  avatar           : "profile.png"
+  avatar           : "headshot.jpg"
   bio              : "Data Scientist at Bayer | Graduated From Cornell University"
   location         : "Location"
   employer         :
