--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Harrison Zhao"
   avatar           : "headshot.jpg"
-  bio              : "Data Scientist at Bayer \n Cornell University"
+  bio              : "Data Scientist at Bayer"
   location         : "St Louis, MO"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
